# text_arcs

./: README.md  pyproject.toml
src/text_arcs/: __init__.py  cli.py  core.py
