[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-arcs"
version = "0.1.0"
description = "Generate SVG files with curved text for use in e.g. Keynote presentations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Til Birnstiel", email = "til.birnstiel@lmu.de"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/birnstiel/text_arcs"
Repository = "https://github.com/birnstiel/text_arcs"

[project.scripts]
text_arc = "text_arcs.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
